<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    tools:context="com.digitalnusantarastudio.bakingapp.fragments.RecipeStepFragment"
    tools:listitem="@layout/recipe_step_fragment_layout"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredients_text"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/txtIngredients"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layoutManager="LinearLayoutManager"
        android:name="com.digitalnusantarastudio.bakingapp.fragments.RecipeStepFragment"/>
</LinearLayout>