<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.digitalnusantarastudio.bakingapp.activities.StepDetailActivity">

    <!--this container will contain fragment for detail step. -->
    <fragment android:name="com.digitalnusantarastudio.bakingapp.fragments.StepDetailFragment"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/step_detail_fragment"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:scaleType="centerInside"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/navigation_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPrev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prev_key"
            android:onClick="prev" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next_key"
            android:onClick="next"/>
    </LinearLayout>
</LinearLayout>